# cmake-library-template

./: .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: foo-config.cmake.in
include/: foo.h
src/: bar.cpp  foo.cpp  utils.h
src/bar/: bar.cpp
